# AiCollector

aicollector-skeleton-v0.1/: DECISION.md  README.md  SPECIFICATION.md  check_dependencies.sh  collector.py  config.yaml  install.sh  pyproject.toml  specification.md  uninstall.sh
aicollector-skeleton-v0.1/collectors/: __init__.py  apt.py  base.py  cpu.py  example_collector.py  ports.py  ram.py  storage.py  system.py
aicollector-skeleton-v0.1/core/: base_collector.py  config_loader.py  diff_engine.py  event_bus.py  exceptions.py  hashing.py  knowledge_store.py  lockfile.py  logger.py  pipeline.py  registry.py  sanitizer.py  schemas.py  self_diagnostic.py  system_adapter.py
