[project]
name = "aicollector"
version = "0.1.0"
description = "Read-only server knowledge collector for AI agents"
readme = "README.md"
requires-python = ">= 3.12"
license = {text = "MIT"}
authors = [
    {name = "AICollector Team"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
aicollector = "collector:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "collectors*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=aicollector --cov-report=term-missing"

[tool.coverage.run]
source = ["core", "collectors"]
omit = ["tests/*", "*/__pycache__/*"]
